[refactoring] the path parsing to support url path parsing independent from url parsing

--- a/src/FurlStrong.Parsing/FurlStrong.Parsing.fsproj
+++ b/src/FurlStrong.Parsing/FurlStrong.Parsing.fsproj
@@ -52,6 +52,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AST.fs" />
+    <Compile Include="ParseError.fs" />
+    <Compile Include="ParserHelpers.fs" />
+    <Compile Include="FurlPathParser.fs" />
     <Compile Include="FurlParser.fs" />
     <None Include="packages.config" />
     <None Include="app.config" />
