--- a/src/FurlStrong.Tests/FurlStrong.Tests.csproj
+++ b/src/FurlStrong.Tests/FurlStrong.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Basics.cs" />
     <Compile Include="Paths.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Queries.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
