Query is a one dimensional ordered multivalue dictionary method that maintains parity with the NameValueCollection that backs HttpRequest QueryString

--- a/src/FurlStrong.Parsing/FurlStrong.Parsing.fsproj
+++ b/src/FurlStrong.Parsing/FurlStrong.Parsing.fsproj
@@ -55,6 +55,7 @@
     <Compile Include="ParseError.fs" />
     <Compile Include="ParserHelpers.fs" />
     <Compile Include="FurlPathParser.fs" />
+    <Compile Include="FurlQueryStringParser.fs" />
     <Compile Include="FurlParser.fs" />
     <None Include="packages.config" />
     <None Include="app.config" />
