--- a/src/FurlStrong/FurlStrong.csproj
+++ b/src/FurlStrong/FurlStrong.csproj
@@ -50,7 +50,10 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AOP\UpdatePathNetlocOnExitAttribute.cs" />
+    <Compile Include="Internal\EnumerableExtensions.cs" />
     <Compile Include="Furl.cs" />
+    <Compile Include="Internal\TupleExtensions.cs" />
+    <Compile Include="OMDict.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
