--- a/src/FurlStrong.Tests/FurlStrong.Tests.csproj
+++ b/src/FurlStrong.Tests/FurlStrong.Tests.csproj
@@ -62,6 +62,7 @@
     <Compile Include="OMDictionary\Miscellaneous.cs" />
     <Compile Include="OMDictionary\Overview.cs" />
     <Compile Include="OMDictionary\Pops.cs" />
+    <Compile Include="Parameters.cs" />
     <Compile Include="Paths.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Queries.cs" />
