--- a/src/FurlStrong.Tests/FurlStrong.Tests.csproj
+++ b/src/FurlStrong.Tests/FurlStrong.Tests.csproj
@@ -55,6 +55,7 @@
   <ItemGroup>
     <Compile Include="Basics.cs" />
     <Compile Include="Fragments.cs" />
+    <Compile Include="Miscellaneous.cs" />
     <Compile Include="OMDictionary\OMDictApprovalHelpers.cs" />
     <Compile Include="OMDictionary\Getters_Setters_and_Adders.cs" />
     <Compile Include="OMDictionary\Groups_And_Group_Iteration.cs" />
