filing the Furl tests to make room for the Furlstrong parsing

--- a/src/FurlStrong.Tests/FurlStrong.Tests.csproj
+++ b/src/FurlStrong.Tests/FurlStrong.Tests.csproj
@@ -53,9 +53,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Basics.cs" />
-    <Compile Include="Fragments.cs" />
-    <Compile Include="Miscellaneous.cs" />
+    <Compile Include="FurlTests\Basics.cs" />
+    <Compile Include="FurlTests\Fragments.cs" />
+    <Compile Include="FurlTests\Miscellaneous.cs" />
     <Compile Include="OMDictionary\OMDictApprovalHelpers.cs" />
     <Compile Include="OMDictionary\Getters_Setters_and_Adders.cs" />
     <Compile Include="OMDictionary\Groups_And_Group_Iteration.cs" />
@@ -64,14 +64,13 @@
     <Compile Include="OMDictionary\Miscellaneous.cs" />
     <Compile Include="OMDictionary\Overview.cs" />
     <Compile Include="OMDictionary\Pops.cs" />
-    <Compile Include="Parameters.cs" />
-    <Compile Include="Paths.cs" />
+    <Compile Include="Furl\Parameters.cs" />
+    <Compile Include="Furl\Paths.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Queries.cs" />
+    <Compile Include="Furl\Queries.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="FurlAPI.md" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
