--- a/src/FurlStrong.Parsing/FurlStrong.Parsing.fsproj
+++ b/src/FurlStrong.Parsing/FurlStrong.Parsing.fsproj
@@ -48,6 +48,9 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http">
+      <Private>False</Private>
+    </Reference>
     <Reference Include="System.Numerics" />
   </ItemGroup>
   <ItemGroup>
@@ -57,6 +60,7 @@
     <Compile Include="FurlPathParser.fs" />
     <Compile Include="FurlQueryStringParser.fs" />
     <Compile Include="FurlParser.fs" />
+    <Compile Include="FurlRouteCollectionParser.fs" />
     <None Include="packages.config" />
     <None Include="app.config" />
   </ItemGroup>
