--- a/src/FurlStrong.Tests/FurlStrong.Tests.csproj
+++ b/src/FurlStrong.Tests/FurlStrong.Tests.csproj
@@ -46,6 +46,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -53,6 +54,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FurlRouteCollectionTests.cs" />
     <Compile Include="FurlTests\Basics.cs" />
     <Compile Include="FurlTests\Fragments.cs" />
     <Compile Include="FurlTests\Miscellaneous.cs" />
@@ -64,10 +66,10 @@
     <Compile Include="OMDictionary\Miscellaneous.cs" />
     <Compile Include="OMDictionary\Overview.cs" />
     <Compile Include="OMDictionary\Pops.cs" />
-    <Compile Include="Furl\Parameters.cs" />
-    <Compile Include="Furl\Paths.cs" />
+    <Compile Include="FurlTests\Parameters.cs" />
+    <Compile Include="FurlTests\Paths.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Furl\Queries.cs" />
+    <Compile Include="FurlTests\Queries.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
