--- a/src/FurlStrong/FurlStrong.csproj
+++ b/src/FurlStrong/FurlStrong.csproj
@@ -41,6 +41,7 @@
     <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -50,6 +51,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AOP\UpdatePathNetlocOnExitAttribute.cs" />
+    <Compile Include="FurlRoute.cs" />
+    <Compile Include="FurlRouteCollection.cs" />
     <Compile Include="Internal\EnumerableExtensions.cs" />
     <Compile Include="Furl.cs" />
     <Compile Include="Internal\TupleExtensions.cs" />
@@ -61,15 +64,18 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="FodyWeavers.xml">
+      <SubType>Designer</SubType>
+    </Content>
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\FurlStrong.Parsing\FurlStrong.Parsing.fsproj">
       <Project>{99787c4a-f7d2-47f9-afd2-3cfd7314c6ee}</Project>
       <Name>FurlStrong.Parsing</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <Content Include="FodyWeavers.xml">
-      <SubType>Designer</SubType>
-    </Content>
+    <Folder Include="Generation\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
