--- a/src/FurlStrong/FurlStrong.csproj
+++ b/src/FurlStrong/FurlStrong.csproj
@@ -39,10 +39,17 @@
       <HintPath>..\..\packages\FParsec.1.0.1\lib\net40-client\FParsecCS.dll</HintPath>
     </Reference>
     <Reference Include="FSharp.Core, Version=4.3.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a, processorArchitecture=MSIL" />
+    <Reference Include="RazorTemplates.Core">
+      <HintPath>..\..\packages\RazorTemplates.1.2.0\lib\RazorTemplates.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Razor, Version=2.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
+      <Private>True</Private>
+      <HintPath>..\..\packages\RazorTemplates.1.2.0\lib\System.Web.Razor.dll</HintPath>
+    </Reference>
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -52,15 +59,21 @@
   <ItemGroup>
     <Compile Include="AOP\UpdatePathNetlocOnExitAttribute.cs" />
     <Compile Include="FurlRoute.cs" />
-    <Compile Include="FurlRouteCollection.cs" />
+    <Compile Include="FurlRouteMap.cs" />
+    <Compile Include="Generation\Generator.cs" />
+    <Compile Include="Generation\StronglyTypedUrlsViewModel.cs" />
     <Compile Include="Internal\EnumerableExtensions.cs" />
     <Compile Include="Furl.cs" />
+    <Compile Include="Internal\ManifestResourceHelper.cs" />
     <Compile Include="Internal\TupleExtensions.cs" />
     <Compile Include="OMDict.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <EmbeddedResource Include="Generation\StronglyTypedUrls.cshtml">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </EmbeddedResource>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
@@ -74,9 +87,7 @@
       <Name>FurlStrong.Parsing</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Generation\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="$(SolutionDir)\.nuget\NuGet.targets" Condition="Exists('$(SolutionDir)\.nuget\NuGet.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
