--- a/src/FurlSharp/packages.config
+++ b/src/FurlSharp/packages.config
@@ -2,5 +2,7 @@
 <packages>
   <package id="Fody" version="1.22.1" targetFramework="net45" developmentDependency="true" />
   <package id="FParsec" version="1.0.1" targetFramework="net45" />
+  <package id="ILMerge" version="2.13.0307" targetFramework="net45" />
   <package id="MethodDecorator.Fody" version="0.8.1.1" targetFramework="net45" />
+  <package id="MSBuild.ILMerge.Task" version="1.0.2" targetFramework="net45" />
 </packages>
