updating nuget.exe, adding a nuspec, enabling buildPackage

--- a/src/FurlSharp/packages.config
+++ b/src/FurlSharp/packages.config
@@ -2,5 +2,5 @@
 <packages>
   <package id="Fody" version="1.22.1" targetFramework="net45" developmentDependency="true" />
   <package id="FParsec" version="1.0.1" targetFramework="net45" />
-  <package id="MethodDecorator.Fody" version="0.8.1.1" targetFramework="net45" />
+  <package id="MethodDecorator.Fody" version="0.8.1.1" targetFramework="net45" developmentDependency="true" />
 </packages>
